package ui;


public interface Button {
    
    void paint();
}
