package ui;


public interface Checkbox {
    
    void paint();
}
