package ui;


public interface GUIFactory {
    
    Button createButton();

    
    Checkbox createCheckbox();
}
